output.log
.\src\estruturas.c: In function 'criarBaseDeLivros':
.\src\estruturas.c:240:11: error: incompatible types when assigning to type 'TLivro {aka struct livro}' from type 'TLivro * {aka struct livro *}'
         K = criar_livro(vet[i], "Titulo", "Autor Desconhecido");
           ^
.\src\estruturas.c:241:20: error: incompatible type for argument 1 of 'salvaLivro'
         salvaLivro(K, saida);
                    ^
.\src\estruturas.c:194:6: note: expected 'TLivro * {aka struct livro *}' but argument is of type 'TLivro {aka struct livro}'
 void salvaLivro(TLivro *livro, FILE *saida) {
      ^~~~~~~~~~
.\src\estruturas.c:244:10: error: incompatible type for argument 1 of 'free'
     free(K);
          ^
In file included from .\src\estruturas.h:11:0,
                 from .\src\estruturas.c:1:
c:\mingw\include\stdlib.h:487:39: note: expected 'void *' but argument is of type 'TLivro {aka struct livro}'
 _CRTIMP __cdecl __MINGW_NOTHROW  void free (void *);
                                       ^~~~
